# Web-Search-Engines

./: readme.md
crawler/: crawler.py  explain.txt  readme.md  readme.txt  requirements.txt
project/: CMakeLists.txt  main.cpp  readme.md
project/parallel_hashmap/: phmap.h  phmap_base.h  phmap_bits.h  phmap_config.h  phmap_fwd_decl.h  phmap_utils.h
project/src/indexing/: index_builder.cpp  index_builder.h  structs.h  trec_reader.cpp  trec_reader.h
project/src/query/: helpers.h  initialize.cpp  inverted_list.cpp  inverted_list.h  query.cpp  query.h  structs.h
